--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"scripts": {
 		"build": "tsc",
 		"dev": "tsc --watch",
+		"debug": "node --import tsx source/cli.tsx",
 		"test": "npm run format:check && ava",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
@@ -38,6 +39,7 @@
 		"ink-testing-library": "^3.0.0",
 		"prettier": "^2.8.7",
 		"ts-node": "^10.9.1",
+		"tsx": "^4.19.2",
 		"typescript": "^5.0.3",
 		"xo": "^0.53.1"
 	},
@@ -47,7 +49,7 @@
 			"tsx": "module"
 		},
 		"nodeArguments": [
-			"--loader=ts-node/esm"
+			"--import=tsx"
 		]
 	}
 }
