--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"moduleResolution": "node16",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"sourceMap": true
 	},
 	"include": ["source"]
 }
