--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"scripts": {
 		"build": "tsc",
 		"dev": "tsc --watch",
-		"debug": "node --import tsx src/cli.tsx",
+		"debug": "node --import tsx source/cli.tsx",
 		"test": "npm run format:check && ava",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"@langchain/core": "^0.3.66",
 		"@langchain/openai": "^0.6.2",
+		"dotenv": "^17.2.0",
 		"ink": "^4.1.0",
 		"langchain": "^0.3.30",
 		"meow": "^11.0.0",
