Bigger chat window

--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
 		"build": "tsc",
 		"dev": "tsc --watch",
 		"debug": "node --import tsx source/cli.tsx",
-		"test": "npm run format:check && ava",
+		"test": "node test.cjs",
+		"test:cli": "node test.cjs basic",
+		"test:config": "node test.cjs config",
+		"test:agent": "node test.cjs agent",
+		"test:stress": "node test.cjs stress",
+		"test:watch": "node test.cjs watch",
+		"test:all": "node test.cjs all",
+		"test:component": "npm run format:check && ava test.tsx",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"lint": "npm run format"
