--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"test:component": "npm run format:check && jest",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
-		"lint": "npm run format"
+		"lint": "npm run format",
+		"prepare": "husky"
 	},
 	"files": [
 		"dist"
@@ -48,6 +49,7 @@
 		"eslint-config-xo-react": "^0.27.0",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^5.2.0",
+		"husky": "^9.1.7",
 		"ink-testing-library": "^3.0.0",
 		"jest": "^29.7.0",
 		"prettier": "^2.8.7",
