--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"build": "tsc",
 		"dev": "tsc --watch",
 		"debug": "node --import tsx source/cli.tsx",
+		"watch": "npx tsx watch --import tsx source/cli.tsx",
 		"test": "jest",
 		"test:unit": "jest source/",
 		"test:watch": "jest --watch",
@@ -29,6 +30,7 @@
 		"@langchain/tavily": "^0.1.4",
 		"dotenv": "^17.2.0",
 		"ink": "^4.1.0",
+		"ink-text-input": "^6.0.0",
 		"langchain": "^0.3.30",
 		"meow": "^11.0.0",
 		"react": "^18.2.0",
