--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
 		"jsx": "react-jsx",
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
-		"moduleResolution": "node16",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"skipLibCheck": true,
 		"sourceMap": true
 	},
