--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
 		"@langchain/openai": "^0.6.2",
 		"@langchain/tavily": "^0.1.4",
 		"dotenv": "^17.2.0",
-		"ink": "^4.1.0",
+		"ink": "^6.1.0",
+		"ink-select-input": "^6.2.0",
 		"ink-text-input": "^6.0.0",
 		"langchain": "^0.3.30",
 		"meow": "^11.0.0",
-		"react": "^18.2.0",
+		"react": "^19.0.0",
 		"yaml": "^2.8.0",
 		"zod": "^3.25.76"
 	},
@@ -41,7 +42,7 @@
 		"@sindresorhus/tsconfig": "^3.0.1",
 		"@types/ink-testing-library": "^1.0.4",
 		"@types/jest": "^29.5.8",
-		"@types/react": "^18.0.32",
+		"@types/react": "^19.0.0",
 		"@typescript-eslint/eslint-plugin": "^8.37.0",
 		"@typescript-eslint/parser": "^8.37.0",
 		"@vdemedes/prettier-config": "^2.0.1",
