--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,14 +20,18 @@
 			"preLaunchTask": "npm: build"
 		},
 		{
-			"name": "Debug Memory Tests",
+			"name": "Debug Single Tests",
 			"type": "node",
 			"request": "launch",
 			"program": "${workspaceFolder}/node_modules/.bin/jest",
-			"args": ["source/utils/__tests__/memory.test.ts", "--runInBand"],
+			"args": [
+				"source/utils/__tests__/agent.test.ts", 
+				"--runInBand"
+			],
 			"runtimeArgs": ["--loader", "ts-node/esm"],
 			"console": "integratedTerminal",
-			"skipFiles": ["<node_internals>/**"]
+			"skipFiles": ["<node_internals>/**"],
+			"envFile": "${workspaceFolder}/.env"
 		},
 		{
 			"name": "Debug React Init Tests",
