--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,10 +24,7 @@
 			"type": "node",
 			"request": "launch",
 			"program": "${workspaceFolder}/node_modules/.bin/jest",
-			"args": [
-				"source/utils/__tests__/agent.test.ts", 
-				"--runInBand"
-			],
+			"args": ["source/utils/__tests__/agent.test.ts", "--runInBand"],
 			"runtimeArgs": ["--loader", "ts-node/esm"],
 			"console": "integratedTerminal",
 			"skipFiles": ["<node_internals>/**"],
